--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
     margin-right: 60px;
 }
 
@@ -94,9 +94,10 @@
 .settings-text {
     color: black;
     font-size: 16px;
-    font-family: Manrope;
+    font-family: Manrope, serif;
     font-weight: 600;
     text-align: center;
+    text-decoration: none;
 }
 
 /* Profile Wrapped Container */
