--- a/frontend/src/pages/Wrapped/WrappedIntro/WrappedIntro.css
+++ b/frontend/src/pages/Wrapped/WrappedIntro/WrappedIntro.css
@@ -64,6 +64,7 @@
     font-family: Manrope, sans-serif;
     font-weight: 1000;
     text-align: left;
+    margin-bottom: 0px;
 }
 
 .center-text p {
@@ -71,7 +72,7 @@
     font-size: 18px;
     font-family: Manrope, sans-serif;
     font-weight: 500;
-    margin-top: 0;
+    margin-top: 0px;
 }
 
 .begin-button {
